<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimary"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.softnauts.visionauts.ui.help.HelpActivity">

    <TextView
            android:id="@+id/textHelpHeader"
            android:fontFamily="@font/nova"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:text="@string/help"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:padding="12dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/path"
            android:id="@+id/buttonBack"
            android:contentDescription="@string/back_button"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textHelpHeader"
            app:layout_constraintBottom_toBottomOf="@+id/textHelpHeader"/>

    <TextView
            android:textStyle="bold"
            android:fontFamily="@font/nova"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:lineSpacingExtra="17sp"
            android:text="@string/help_text"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textHelpHeader"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginStart="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
