<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimary"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.softnauts.visionauts.ui.settings.SettingsActivity">

    <TextView
            android:id="@+id/textSettingsHeader"
            android:fontFamily="@font/nova"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:text="@string/settings"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:contentDescription="@string/back_button"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/path"
            android:id="@+id/buttonBack"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textSettingsHeader"
            app:layout_constraintBottom_toBottomOf="@+id/textSettingsHeader"/>

    <TextView
            android:fontFamily="@font/nova"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="#ffffff"
            android:lineSpacingExtra="16sp"
            android:text="@string/scanning_range"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textSettingsHeader"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:id="@+id/textView"/>

    <TextView
            android:id="@+id/textProgress"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="#ffffff"
            tools:text="42"
            android:fontFamily="@font/nova"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/textView"/>

    <SeekBar
            android:contentDescription="@string/range_seek_bar"
            android:max="500"
            android:progress="250"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
